# filterfund

./: .env.production  .gitignore  README.md  canister_ids.json  deploy-dev.sh  dfx.json  package-lock.json  package-set.dhall  package.json  tailwind.config.js  vessel.json  webpack.config.js
.dfx/local/: canister_ids.json  network-id
.dfx/local/lsp/: ssi5q-mte7j-7h7xp-g6yoa.did
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
ar-for-equality-substrate/: Cargo.toml  README.md  docker-compose.yml
ar-for-equality-substrate/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
ar-for-equality-substrate/pallets/asset-storage/: Cargo.toml
ar-for-equality-substrate/pallets/asset-storage/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
ar-for-equality-substrate/pallets/campaign-management/: Cargo.toml
ar-for-equality-substrate/pallets/campaign-management/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
ar-for-equality-substrate/pallets/user-profiles/: Cargo.toml
ar-for-equality-substrate/pallets/user-profiles/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
ar-for-equality-substrate/runtime/: Cargo.toml
ar-for-equality-substrate/runtime/src/: lib.rs
ar-for-equality-substrate/runtime/src/weights/: mod.rs
canisters/: nano.1656.save
canisters/asset/: main.mo
canisters/campaign/: main.mo  types.mo
canisters/filter/: main.mo  types.mo
canisters/user/: main.mo  types.mo
canisters/utils/: Text.mo  TextUtil.mo
contracts/filter-fund/: lib.rs
contracts/filterfundnew/: Cargo.toml  lib.rs
public/: index.html
src/: App.css  App.tsx  AppRoutes.tsx  canister-config.js  canister-config.ts  config.ts  global.css  index.tsx  react-app-env.d.ts
src/assets/: index.ts
src/components/: Button.tsx  CampaignCard.tsx  CampaignList.tsx  CampaignSkeleton.tsx  ConnectionStatus.tsx  DarkModeToggle.tsx  DebugPanel.tsx  DisplayCampaigns.tsx  FilterCard.tsx  FilterGrid.tsx  Footer.tsx  Icons.tsx  Layout.tsx  LoadingSpinner.tsx  Login.tsx  Navbar.tsx  Notification.tsx  OptimizedImage.tsx  PageTransition.tsx  ProgressBar.tsx  ThreeDScene.tsx  index.ts
src/config/: debug.js  env.ts
src/context/: AuthContext.tsx  index.tsx
src/pages/: CampaignDetails.tsx  CreateCampaign.tsx  Homepage.tsx  LandingPage.tsx  Profile.tsx
src/services/: api.ts  campaign-service.ts  canister.ts  custom-actor.js  debug-helper.ts  icp.ts  pinata-service.ts  polkadot-api.ts  polkadot-service.ts
src/types/: global.d.ts
src/utils/: animation.ts  cache.ts  calculations.ts  debounce.ts
(+27 files in other folders)
