[package]
name = "ar-for-equality-substrate"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2021"

[dependencies]
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
pallet-template = { path = "./pallets/campaign-management" }
pallet-user-profiles = { path = "./pallets/user-profiles" }
pallet-asset-storage = { path = "./pallets/asset-storage" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3