[package]
name = "asset-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { version = "6.0.0", default-features = false }
frame-system = { version = "6.0.0", default-features = false }
sp-runtime = { version = "6.0.0", default-features = false }
sp-core = { version = "6.0.0", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
]